<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:p="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PatientProfile">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="My Profile" />

        <android.support.v7.widget.CardView
            android:layout_width="260dp"
            android:layout_gravity="center"
            android:layout_height="260dp"
            android:elevation="12dp"
            android:id="@+id/view2"
            p:cardCornerRadius="130dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/patientPhoto"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/unnamed"/>

        </android.support.v7.widget.CardView>

        <View
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv1"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/empty_details"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv2"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/empty_details"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv3"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/empty_details"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv4"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/age1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/empty_details"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv5"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/empty_details"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/updateProfile"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/colorButton"
            android:text="@string/update_profile"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>