<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientProfileUpdate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Update Profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv1"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv2"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lname1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv4"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/age1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/patient_profile_tv5"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="textPostalAddress" />

        </LinearLayout>


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addPhoto"
                android:layout_margin="30dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorButton"
                android:text="Choose Photo"
                android:padding="15dp"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/updateProfile"
                android:layout_margin="30dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorButton"
                android:padding="15dp"
                android:textColor="@color/black"
                android:text="@string/update_profile" />
        </LinearLayout>

        </LinearLayout>

</ScrollView>